# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rust-crate-template"
version = "0.1.1"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "A Rust crate template"
documentation = "https://docs.rs/rust-crate-template"
readme = "README.md"
homepage = "https://github.com/Fuwn/rust-crate-template"
repository = "https://github.com/Fuwn/rust-crate-template"
license = "GPL-3.0-only"
keywords = ["crate"]
categories = ["development-tools"]

[toolchain]
channel = "nightly"

[dependencies]
bench = "1.1.0"
bytemuck = "1.16.0"
cargo = "0.79.0"
enum_dispatch = "0.3.13"
image = { version = "0.25.1", default-features = false, features = ["rayon"] }
num-traits = "0.2.19"

[dev-dependencies]
image = "0.25.1"
test-case = "3.3.1"
